updated some income tests, now retrieving and deleting income requires a query param for income id, added swagger spec for income
