# billMan/src/main/kotlin/income/IncomeRouter.kt
@@ -1,10 +1,19 @@
 package income
 
 import auth.UsersService
+import generics.BadRequest
 import generics.GenericRouter
+import generics.NotFound
+import generics.Ok
 import history.HistoryService
 import io.ktor.application.ApplicationCall
+import io.ktor.application.call
+import io.ktor.routing.Route
+import io.ktor.routing.delete
+import io.ktor.routing.get
 import io.ktor.util.pipeline.PipelineContext
+import respond
+import respondError
 import shared.billMan.Income
 
 class IncomeRouter(
@@ -17,6 +26,40 @@ class IncomeRouter(
     service,
     IncomeResponse()
 ) {
+    override fun Route.getDefault() {
+        get("/") {
+            if (call.request.queryParameters.isEmpty()) {
+                call.respond(Ok(IncomeResponse(service.getAll())))
+            } else {
+                val incomeId =
+                    call.request.queryParameters["income"]
+                        ?: return@get call.respondError(BadRequest("Invalid income id."))
+
+                service.getSingle { service.table.id eq incomeId.toInt() }?.let {
+                    call.respond(Ok(IncomeResponse(listOf(it))))
+                } ?: call.respond(NotFound("Could not get income with $incomeId"))
+            }
+        }
+    }
+
+    override fun Route.deleteDefault() {
+        delete("/") {
+            if (call.request.queryParameters.isEmpty())
+                return@delete call.respondError(BadRequest("Income id is required. `?income={incomeId}`"))
+
+            val incomeId =
+                call.request.queryParameters["income"]
+                    ?: return@delete call.respondError(BadRequest("Invalid income id."))
+
+            val id = deleteQualifier(incomeId)?.id
+                ?: return@delete call.respond(NotFound("Income with an id of $incomeId was not found."))
+
+            val removed = service.delete(id) { singleEq(incomeId) }
+
+            call.respond(if (removed) Ok("Successfully removed income.") else NotFound("Income with an id of $incomeId was not found."))
+        }
+    }
+
     override suspend fun PipelineContext<Unit, ApplicationCall>.putAdditional(
         item: Income,
         updatedItem: Income
