# swagger.yaml
@@ -951,7 +951,7 @@ paths:
                 type: object
                 $ref: '#/definitions/Category'
         "404":
-          description: "Medicare data not found"
+          description: "Category data not found"
           schema:
             $ref: '#/definitions/NotFoundResponse'
     delete:
@@ -1146,7 +1146,7 @@ paths:
                 type: object
                 $ref: '#/definitions/Bill'
         "404":
-          description: "Medicare data not found"
+          description: "Bill data not found"
           schema:
             $ref: '#/definitions/NotFoundResponse'
     delete:
@@ -1160,6 +1160,176 @@ paths:
       parameters:
         - in: query
           name: "bill"
+          description: "Id of the data to delete"
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: "Successfully deleted data"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              message:
+                type: string
+        "400":
+          description: "Invalid data supplied"
+          schema:
+            type: object
+            $ref: '#/definitions/BadRequestResponse'
+        "404":
+          description: "Data not found"
+          schema:
+            type: object
+            $ref: '#/definitions/NotFoundResponse'
+  /billMan/income:
+    get:
+      tags:
+        - "Income"
+        - "Bill Man"
+      summary: "Finds all Income accessible to the user"
+      operationId: "findIncome"
+      parameters:
+        - in: query
+          type: integer
+          name: "income"
+          required: false
+          description: "The income you want to retrieve, not giving a income id will retrieve all income"
+      produces:
+        - "application/json"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              message:
+                type: array
+                items:
+                  $ref: "#/definitions/Income"
+        "404":
+          description: "Unable to retrieve data"
+          schema:
+            type: object
+            $ref: "#/definitions/NotFoundResponse"
+    post:
+      tags:
+        - "Income"
+        - "Bill Man"
+      summary: "Add new Income data"
+      operationId: "addIncome"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: body
+          name: "body"
+          description: "Income object that needs to be added"
+          required: true
+          schema:
+            type: object
+            properties:
+              owner:
+                type: object
+                $ref: '#/definitions/User'
+              name:
+                type: string
+              amount:
+                type: string
+              varyingAmount:
+                type: boolean
+              color:
+                type: object
+                $ref: '#/definitions/Color'
+            required:
+              - name
+              - owner
+              - amount
+              - color
+              - varyingAmount
+      responses:
+        "201":
+          description: "Successfully added Income data"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 201
+              message:
+                type: object
+                $ref: '#/definitions/Income'
+        "409":
+          description: "Data conflicted with something already in the database"
+          schema:
+            $ref: '#/definitions/ConflictResponse'
+    put:
+      tags:
+        - "Income"
+        - "Bill Man"
+      summary: "Update existing Income data"
+      operationId: "updateIncome"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: body
+          name: "body"
+          description: "Income data that needs to be updated"
+          required: true
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              owner:
+                type: object
+                $ref: '#/definitions/User'
+              name:
+                type: string
+              amount:
+                type: string
+              varyingAmount:
+                type: boolean
+              color:
+                type: object
+                $ref: '#/definitions/Color'
+            required:
+              - id
+      responses:
+        "200":
+          description: "Successfully updated Income data"
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              message:
+                type: object
+                $ref: '#/definitions/Income'
+        "404":
+          description: "Income data not found"
+          schema:
+            $ref: '#/definitions/NotFoundResponse'
+    delete:
+      tags:
+        - "Income"
+        - "Bill Man"
+      summary: "Deletes Income data with the id"
+      operationId: "deleteIncome"
+      produces:
+        - "application/json"
+      parameters:
+        - in: query
+          name: "income"
           description: "Id of the data to delete"
           required: true
           type: integer
@@ -1358,6 +1528,26 @@ definitions:
         $ref: '#/definitions/User'
       name:
         type: string
+  Income:
+    allOf:
+      - $ref: '#/definitions/GenericItem'
+      - type: object
+      - $ref: '#/definitions/HistoryItem'
+      - type: object
+    type: object
+    properties:
+      owner:
+        type: object
+        $ref: '#/definitions/User'
+      name:
+        type: string
+      amount:
+        type: string
+      varyingAmount:
+        type: boolean
+      color:
+        type: object
+        $ref: '#/definitions/Color'
   Color:
     allOf:
       - $ref: '#/definitions/GenericItem'
@@ -1397,14 +1587,6 @@ definitions:
       status:
         type: integer
         example: 404
-      message:
-        type: string
-  OkResponse:
-    type: object
-    properties:
-      status:
-        type: integer
-        example: 200
       message:
         type: string
   ConflictResponse:
